changes in name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo">EstateSells</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">For Buy</a></li>
           <li><a href="#">For Rent</a></li>
           <li><a href="#">For Sell</a></li>
