--- a/dashboard.html
+++ b/dashboard.html
@@ -210,7 +210,7 @@
         <div class="logo">EstateSells</div>
         <nav>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Buy</a></li>
             <li><a href="#">Sell</a></li>
