Home page dashboard changing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="login.html">Dashboard</a></li>
           <li><a href="#">For Buy</a></li>
           <li><a href="#">For Rent</a></li>
           <li><a href="#">For Sell</a></li>
