--- a/dashboard.html
+++ b/dashboard.html
@@ -45,5 +45,7 @@
       <h1>Welcome <span>User Name</span></h1>
       <p>Here you can manage your account, properties, and activities.</p>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
