Some changes in CSS code

--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
     <div class="tabs">
       <button class="tab active">Buy</button>
       <button class="tab">Rent</button>
-      <button class="tab">Sell</button>
       <button class="tab">New Launches</button>
       <button class="tab">Commercial</button>
     </div>
     <div class="search-box">
-      <input type="text" placeholder="Search by location or project...">
+      <input type="text" placeholder="Search by location....">
       <button onclick="searchProperties()">Search</button>
     </div>
   </section>
