change contact button

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
             </ul>
         </nav>
         <div class="nav-icons">
-            <div class="support">
-                <img src="https://img.icons8.com/ios-filled/24/ffffff/phone.png" alt="Support"/>
-                <span>24x7 Support</span>
-            </div>
             <div class="login-icon dropdown">
                 <a href="#"><img src="https://img.icons8.com/material-outlined/24/ffffff/user.png" alt="Login"/></a>
                 <ul class="dropdown-menu">
@@ -37,6 +33,10 @@
                     <li><a href="#">Shortlisted</a></li>
                 </ul>
             </div>
+            <div class="support">
+              <img src="https://img.icons8.com/ios-filled/24/ffffff/phone.png" alt="Support"/>
+              <span>Contact Us</span>
+          </div>
         </div>
     </div>
 </header>
