--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
             </div>
             <div class="support">
               <img src="https://img.icons8.com/ios-filled/24/ffffff/phone.png" alt="Support"/>
-              <span>24x7 Support</span>
+              <span>Contact Us</span>
           </div>
         </div>
     </div>
