--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
               <ul id="nav-menu">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="login.html">Dashboard</a></li>
-                  <li><a href="#">For Buy</a></li>
+                  <li><a href="/pages/buy.html">For Buy</a></li>
                   <li><a href="#">For Rent</a></li>
                   <li><a href="#">For Sell</a></li>
                   <li><a href="#">Commercial</a></li>
